[package]
name = "dowhatagain"
version = "0.1.0"
edition = "2021"
description = "Simple cli tool to extract todos from piped in files and output to various formats."
licence = "MIT"
keywords = ["todo", "cli", "workflow"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
derive_builder = "0.20.0"
itertools = "0.13.0"
regex = "1.10.4"
